All ready for submission to jop

--- a/escrito/urge13.tex
+++ b/escrito/urge13.tex
@@ -612,7 +612,7 @@ Also plain in the Figure is that white areas, corresponding to standard bill con
 
 \section{Data and Analysis}
 
-We use the Chilean case to test our hypotheses of fast-track authority as a mechanism to constrain floor amendments. We collected original data for Chile between 1998 and 2014.\footnote{The \emph{Cámara de Diputados'} web page (\url{www.camara.cl}) was scraped in November 2014 to retrieve the record (\emph{boletín}) of every proposal made between 11 March 1998 and 10 March 2014. A commented version of the script and the data-set will be posted online upon publication. Data analysis was done with a multiplicity of \texttt{R}'s libraries.} We compiled information on every bill that the executive introduced in Congress between 11 March 1998 and 10 March 2014: when it was introduced, in which chamber of the bicameral Congress, the issue it deals with, the status at the time of consultation, and so forth. We also gathered information on the chronological detail of the bill's legislative process in the House: committee referrals and reports, floor discussion and voting, navette to the Senate, and more. Of direct relevance, we coded all urgency messages received by the \emph{Cámara de Diputados}. Earlier years antedate Internet publication and were dropped, as data completeness in the primary source remains to be verified. The period selected fully covers two Senates, four \emph{Cámaras}, and three presidencies (plus the last two years of an earlier presidency).}
+We use the Chilean case to test our hypotheses of fast-track authority as a mechanism to constrain floor amendments. We collected original data for Chile between 1998 and 2014.\footnote{We scraped the \emph{Cámara de Diputados'} web page (\url{www.camara.cl}) in November 2014 to retrieve the record (\emph{boletín}) of every proposal made between 11 March 1998 and 10 March 2014. A commented version of the script and the data-set will be posted online upon publication. We conducted data analysis with a multiplicity of \texttt{R}'s libraries.} We compiled information on every bill that the executive introduced in Congress between 11 March 1998 and 10 March 2014: when it was introduced, in which chamber of the bicameral Congress, the issue it deals with, the status at the time of consultation, and so forth. We also gathered information on the chronological detail of the bill's legislative process in the House: committee referrals and reports, floor discussion and voting, navette to the Senate, and more. Of direct relevance, we coded all bills marked urgent received by the \emph{Cámara de Diputados}. Earlier years antedate Internet publication and were dropped, as data completeness in the primary source remains to be verified. The period selected fully covers two Senates, four \emph{Cámaras}, and three presidencies (plus the last two years of an earlier presidency).}
 
 %% EMM [13jun18] He quitado los tres párrafos siguientes. Si lo piden los referees, podemos retomar parte o todo.
 
@@ -656,11 +656,11 @@ Table \ref{T:billDescriptives} offers a general summary of bill introduction, pa
 
 %The relative term, which echoes Siavelis' finding for an earlier period, attests to the permissive notion of urgency by Chilean presidents. 
 
-A feature of importance for our argument is the distinction among \emph{types of urgency by degree}. Congress has distinguished urgency types through its internal rules. The congressional organic law gives the president the choice to qualify bills with `simple urgency', which provide Congress with one month's time for consideration (\emph{urgencia simple}, setting a 30 day deadline, as constitutionally-defined), `supreme urgency' (\emph{urgencia suma}, which provides 15 days), or `immediate discussion' (\emph{discusión inmediata}, which provides 6 days).\footnote{\label{fnRelax}The organic law was amended in July 2010 substantially relaxing the deadlines for the `immediate discussion' and `supreme urgency' types, originally set at 10 and 3 days, to 15 and 6 days respectively. Analysis controls for this change. See the appendix for details.} The distinction is necessary because the lower chamber's standing rules (\emph{Reglamento de la Cámara de Diputados}) in the period mandated that supreme urgency qualification triggered restrictive floor consideration rules, whereas the highest and lowest urgency degrees did not. (Rules were amended in 2014 to expand closed rules to all types of urgencies, but this falls outside the time span of our analysis.) For this reason, and unless otherwise noted, by urgency in Chile we mean `supreme urgency' qualifications only. 
+A feature of importance for our argument is the distinction among \emph{types of urgency by degree}. Congress has distinguished urgency types through its internal rules. The congressional organic law gives the president the choice to qualify bills with `simple urgency', which provide Congress with one month's time for consideration (\emph{urgencia simple}, setting a 30 day deadline, as constitutionally-defined), `supreme urgency' (\emph{urgencia suma}, which provides 15 days), or `immediate discussion' (\emph{discusión inmediata}, which provides 6 days).\footnote{\label{fnRelax}The organic law was amended in July 2010 substantially relaxing the deadlines for the `immediate discussion' and `supreme urgency' types, originally set at 10 and 3 days, to 15 and 6 days respectively. Analysis controls for this change. See the appendix for details.} The distinction is necessary because the lower chamber's standing rules (\emph{Reglamento de la Cámara de Diputados}) in the period mandated that supreme urgency qualification triggered restrictive floor consideration rules, whereas the highest and lowest urgency degrees did not. (In 2014 an amendment to the Rules expanded closed rules to two types of urgencies, but this falls outside the time span of our analysis.) For this reason, and unless otherwise noted, by urgency in Chile we mean `supreme urgency' qualifications only. 
 
 %The president may remove urgency at will, with immediate effects. With the exception of messages to the conference, the deadline is for the receiving chamber only, and urgency messages expire at the end of the ordinary period on March 10th every year.
 
-Part B in Table \ref{T:billDescriptives} reports urgency frequencies by type. Bills in the fast-track (panel VI) were more frequent than bills qualified at least once for either immediate discussion (17 percent) or simple urgency (29 percent).\footnote{\label{fnNonExclusive}We say once at least because bills can be qualified urgent more than once. This does not refer to the possibility that a bill is qualified urgent during lower chamber consideration, then again during Senate consideration (analysis, in fact, ignores all upper chamber urgency qualifications); but to the fact that, during \emph{Cámara} consideration, one same bill often received many urgency designations---e.g., an initial simple urgency deadline is reset before its expiration, or replaced by supreme urgency. The modal urgent bill in the period received several such qualifications, sometimes renewing an urgency that was previously withdrawn. Other times the deadline for consideration was reset before the original expired, often more than once. Less common were cases changing one deadline by a shorter one. We plan to investigate the puzzling patterns of urgency chains in a separate project. Urgency chains imply that the absolute frequencies by types do not add up to the total in panel VIII.} Analysis ignores all `immedite discussion' and `simple urgency' qualifications (i.e., only panel VI is fast-track qualification). 
+Part B in Table \ref{T:billDescriptives} reports urgency frequencies by type. Bills in the fast-track (panel VI) were more frequent than bills qualified at least once for either immediate discussion (17 percent) or simple urgency (29 percent).\footnote{\label{fnNonExclusive}We say once at least because bills can be qualified urgent more than once. This does not refer to the possibility that a bill is qualified urgent during lower chamber consideration, then again during Senate consideration (analysis, in fact, ignores all Upper Chamber urgency qualifications); but to the fact that, during \emph{Cámara} consideration, one same bill often received many urgency designations---e.g., an initial simple urgency deadline is reset before its expiration, or replaced by supreme urgency. The modal urgent bill in the period received several such qualifications, sometimes renewing an urgency that was previously withdrawn. Other times the deadline for consideration was reset before the original expired, often more than once. Less common were cases changing one deadline by a shorter one. We plan to investigate the puzzling patterns of urgency chains in a separate project. Urgency chains imply that the absolute frequencies by types do not add up to the total in panel VIII.} Analysis ignores all `immedite discussion' and `simple urgency' qualifications (i.e., only panel VI is fast-track qualification). 
 
 \subsection{Fast-track predictors}
 
@@ -707,18 +707,16 @@ Total                 & \emph{100}$^{\dagger}$ & \emph{100}      & \emph{100}  &
 
 We also include a control for multiple referrals. Nearly one quarter (24 percent) of bills in the period were referred to more than one standing committee. The `other committee' count excludes the Finance Committee, with jurisdiction over any form of new spending (and discussed next; multiple referrals rise to 32 percent when the Finance Committee is considered). Also excluded are special and bicameral committees. A single co-partisan or coalition chair among multiple referees suffices for the indicator previously discussed to equal 1. Inclusion of the indicator \emph{Multiple Referrals} should capture any effect of agenda control sharing among several committee chairs during the proposal's negotiation. 
 
-The variable intended to capture bill-specific features is \emph{Hacienda Referral}, which equals 1 for bills referred to the powerful Finance Committee, 0 otherwise. Because the \emph{Hacienda} committee has special status in the Chilean Congress, it deserves to be a separate control. Unlike other standing committees, \emph{Hacienda} has jurisdiction over \emph{every} bill authorizing spending in any domain. Moreover, the unanimous exception rule discussed earlier is inapplicable to \emph{Hacienda} bills, which must be reported prior to floor consideration.\footnote{Standing rules (\emph{Ley Orgánica del Congreso}) arts.\ 17 and 21.} \emph{Hacienda} committee members, working in tandem with Finance Ministry staff, may or may not appropriate funds from the budget in their report to the floor \citep{aleman.navia.UrgChi.2009}. Not unlike the Appropriations and Rules committees in the U.S.\ House, \emph{Hacienda} has the status of a control committee, a key asset for agenda power \citep{kiewiet.mccubbins.1991}. \emph{Hacienda} referral therefore controls for a subset of generally important proposals, and should associate positively with urgency authority.
+The variable intended to capture bill-specific features is \emph{Hacienda Referral}, which equals 1 for bills referred to the powerful Finance Committee, 0 otherwise. Because the \emph{Hacienda} committee has special status in the Chilean Congress, it deserves to be a separate control. Unlike other standing committees, \emph{Hacienda} has jurisdiction over \emph{every} bill authorizing spending in any domain. Moreover, the unanimous exception rule discussed earlier is inapplicable to \emph{Hacienda} bills, which must be reported prior to floor consideration.\footnote{Standing rules (\emph{Ley Orgánica del Congreso}) arts.\ 17 and 21.} \emph{Hacienda} committee members, working in tandem with Finance Ministry staff, may or may not appropriate funds from the budget in their report to the floor \citep{aleman.navia.UrgChi.2009}. Not unlike the Appropriations and Rules committees in the U.S.\ House, \emph{Hacienda} has the status of a control committee, a key asset for agenda power \citep{kiewiet.mccubbins.1991}. \emph{Hacienda} referral therefore controls for a subset of generally important proposals, and we expect it to associate positively with urgency authority.
 %So, for instance, a proposal restricting labor benefits to municipal health workers was referred to both the Public Health and Hacienda committees because a small appropriation for verification by the Labor Bureau was \todo{Find another bill to illustrate... can't find date and other elements of the mentioned law} required. 
 
-We include three controls among variables accounting for the strategic environment. \emph{Pres.~Approval} is the net general population presidential approval rate at bill initiation (i.e., the percentage of respondents who approve of the president's job minus the percentage who disapprove).\footnote{Data are from the \emph{Centro de Estudios Públicos} bi-yearly face-to-face opinion polls, available at \url{www.cepchile.cl}.} To the extent that presidents with better public opinion standing are more successful in the legislative arena \citep{bond.fleisher.1990,aleman.navia.UrgChi.2009}, they should also need restrictive rules less often, and reliance on the fast-track might therefore drop. \emph{Introduced in Senate} equals 1 for bills initiated in the upper chamber, 0 otherwise. By virtue of being smaller, enjoying longer terms, and not being firmly under the president's coalition control during most of the period, bills sent or initiated in the Senate might present systematic differences in fast-track usage. And \emph{Senate Majority} equals 1 if the president's coalition controlled half or more of upper chamber seats when the bill was initiated, 0 otherwise.\footnote{Parties in the presidential and opposition coalitions were tied throughout most of the 1998--2006 Senate (majority briefly oscillating back and forth in the first years due to member indictments, impeachments, and deaths in both coalitions). Ties are coded as \emph{Senate Majority} = 1.} Other things equal, presidents with sufficient partisan legislative resources in both chambers will find it easier to push proposals through Congress, and might be less inclined to use the fast-track prerogative to successfully navigate log-rolls through the plenary session.
+We include three controls among variables accounting for the strategic environment. \emph{Presidential Approval} is the net general population presidential approval rate at bill initiation (i.e., the percentage of respondents who approve of the president's job minus the percentage who disapprove).\footnote{Data are from the \emph{Centro de Estudios Públicos} bi-yearly face-to-face opinion polls, available at \url{www.cepchile.cl}.} To the extent that presidents with better public opinion standing are more successful in the legislative arena \citep{bond.fleisher.1990,aleman.navia.UrgChi.2009}, we expect them also to need restrictive rules less often, and reliance on the fast-track might therefore drop. \emph{Introduced in Senate} equals 1 for bills initiated in the Upper Chamber, 0 otherwise. By virtue of being smaller, enjoying longer terms, and not being firmly under the president's coalition control during most of the period, bills sent or initiated in the Senate might present systematic differences in fast-track usage. And \emph{Senate Majority} equals 1 if the president's coalition controlled half or more of Upper Chamber seats when the bill was initiated, 0 otherwise.\footnote{Parties in the presidential and opposition coalitions were tied throughout most of the 1998--2006 Senate (majority briefly oscillating back and forth in the first years due to member indictments, impeachments, and deaths in both coalitions). Ties are coded as \emph{Senate Majority} = 1.} Other things equal, presidents with sufficient partisan legislative resources in both chambers will find it easier to push proposals through Congress, and might be less inclined to use the fast-track prerogative to successfully navigate log-rolls through the plenary session.
 
-The group of variables accounting for timing control for different aspects of the congressional cycle. \emph{Year Remaining} (and its squared value to capture non-linearity, if any) measures the percentage of the legislative year remaining at bill initiation. Chilean legislative years begin after the (meridional) Summer break. So the variable adopts value 100 for proposals introduced on March 1 (the first day of the legislative year), and value 0 for proposals introduced the last day of February. It should control for stationarity in the data. And \emph{Relax Deadlines} equals 1 for bills initiated in July 2010 or later, 0 otherwise. Any systematic shift in urgency usage attributable to the reform extending urgency deadlines (see footnote \ref{fnRelax}) five months into the 2010--14 legislature should reflect in this coefficient. 
+The group of variables accounting for time-related effects control for different aspects of the congressional cycle. \emph{Year Remaining} (and its squared value to capture non-linearity, if any) measures the percentage of the legislative year remaining at bill initiation. Chilean legislative years begin after the (meridional) Summer break. So the variable adopts value 100 for proposals introduced on March 1 (the first day of the legislative year), and value 0 for proposals introduced the last day of February. It should control for stationarity in the data. And \emph{Relax Deadlines} equals 1 for bills initiated in July 2010 or later, 0 otherwise. Any systematic shift in urgency usage attributable to the reform extending urgency deadlines (see footnote \ref{fnRelax}) five months into the 2010--14 legislature should reflect in this coefficient. 
 
 \subsection{Model Specification and Results}
 
-Given that observations from four elected legislatures, with important differences in the types and the volume of proposals considered \citep{aleman.navia.UrgChi.2009} are pooled, heterogeneity might interfere. So we fit two additional model specifications for robustness verification. One includes fixed legislature effects---i.e., three dummies for bills initiated in the 2002--06, 2006--10, and 2010--14 periods, respectively; the excluded 1998--2002 dummy is the baseline. Another adds further flexibility by also estimating separate errors for bills initiated in each legislature \citep[a so-called mixed effects model,][:262,302]{gelman.hill.2007}. 
-
-Estimation is with a generalized linear model for the mixed effects fit, and logit for the rest. We normalized continuous variables \emph{Pres.~Approval} and \emph{Year Remaining} to speed the GLM's convergence.\footnote{As suggested in \url{http://stackoverflow.com/questions/23478792/warning-messages-when-trying-to-run-glmer-in-r} and \url{https://rstudio-pubs-static.s3.amazonaws.com/33653_57fc7b8e5d484c909b615d8633c01d51.html}. Normalization re-scales and centers the measures in order to improve parameter identification.} Normalized measures were used throughout for model comparability.
+Given that observations from four elected legislatures, with important differences in the types and the volume of proposals considered \citep{aleman.navia.UrgChi.2009} are pooled, heterogeneity might interfere. We fit two additional model specifications for robustness verification. One includes fixed legislature effects---i.e., three dummies for bills initiated in the 2002--06, 2006--10, and 2010--14 periods, respectively; the excluded 1998--2002 dummy is the baseline. Another adds further flexibility by also estimating separate errors for bills initiated in each legislature \citep[a so-called mixed effects model,][:262,302]{gelman.hill.2007}. We estimate a generalized linear model for the mixed effects fit, and logit for the rest. We normalized continuous variables \emph{Pres.~Approval} and \emph{Year Remaining} to speed the GLM's convergence.\footnote{As suggested in \url{http://stackoverflow.com/questions/23478792/warning-messages-when-trying-to-run-glmer-in-r} and \url{https://rstudio-pubs-static.s3.amazonaws.com/33653_57fc7b8e5d484c909b615d8633c01d51.html}. Normalization re-scales and centers the measures in order to improve parameter identification.} Normalized measures were used throughout for model comparability.
 
 % next command removes proportional font in table's superscripts
 %(eval-after-load "tex-mode" '(fset 'tex-font-lock-suscript 'ignore)) 
@@ -777,9 +775,7 @@ Estimation is with a generalized linear model for the mixed effects fit, and log
 
 %\emm{New model, includes executive bills only. Excludes urgency messages in Senate (previously conflated with Cámara urgencias). Could report member bills model in the appendix (coalition chair doesn't work, but co-partisan does!), but adds little to our argument---urgent member bills seem to respond to a different logic.}
 
-.
-
-Table \ref{t:urgenLogit} reports results. The regression model performs satisfactorily. A likelihood-ratio test of overall fit rejects the hypothesis, at below the .001 level, that an intercept-only fit is as good as our models. Predictors across model specifications correctly classify 67--68 percent of the observations. And we find support for our main hypotheses. In line with our expectations, coefficient estimates confirm that both variables measuring the proximity of committee chairs with the president increase the probability that the president will use fast-track authority for floor consideration. \emph{Co-partisan Chair} has a positive coefficient in model 1, as expected, and the effect achieves conventional statistical significance (parentheses in the table report p-values). The evidence is much stronger for the variable's other specification: the coefficient for \emph{Coalition Chair} in models 2--4 is also positive, triples its size, and achieves p-values at .005 or below. This matches what scholars have documented, i.e., that the coalition is as good a predictor of presidential support in Congress---or better, in our case---as the party. The finding is robust across model specifications. In general, all model coefficients remain pretty much unchanged in size and significance when fixed and mixed effects are included on the right side (we are forced to drop variables \emph{Senate Majority} and \emph{Relax Deadlines} due to co-linearity with legislature dummies). 
+Table \ref{t:urgenLogit} reports results.\footnote{The regression model performs satisfactorily. A likelihood-ratio test of overall fit rejects the hypothesis, at below the .001 level, that an intercept-only fit is as good as our models. Predictors across model specifications correctly classify 67--68 percent of the observations.} We find support for our main hypotheses. In line with our expectations, coefficient estimates confirm that both variables measuring the proximity of committee chairs with the president increase the probability that the president will use fast-track authority for floor consideration. \emph{Co-partisan Chair} has a positive coefficient in model 1, as expected, and the effect achieves conventional statistical significance (parentheses in the table report p-values). The evidence is much stronger for the variable's other specification: the coefficient for \emph{Coalition Chair} in models 2--4 is also positive, triples its size, and achieves p-values at .005 or below. In other words, if a bill is sent to a committee where the president finds support (either because the Chair belongs to her party or to her coalition), such a bill is more likely to be fast-tracked. This matches what scholars have documented, i.e., that the coalition is as good a predictor of presidential support in Congress---or better, in our case---as the party. The finding is robust across model specifications. In general, all model coefficients remain pretty much unchanged in size and significance when fixed and mixed effects are included on the right side (we are forced to drop variables \emph{Senate Majority} and \emph{Relax Deadlines} due to co-linearity with legislature dummies). 
 
 %% > mar3
 %%      factor     AME     SE       z      p   lower   upper
@@ -810,7 +806,7 @@ The large effects of \emph{Hacienda Referral} and \emph{Multiple Referrals} dese
 
 %Both time trend variables returned significant coefficients. Other things constant, bills were likelier to become urgent earlier in the term and earlier in the legislative year. The apparent contradiction of the patterns in Figure \ref{f:depvarHistog} is explained by the distinction of non-original urgency messages---where most of the temporal trend is manifest---which is disregarded by the dichotomous measure of urgency analyzed here. 
 
-Another effect worth highlighting is \emph{Introd.\ in Senate}. Bills successfully passing the upper chamber first, where the opposition was systematically larger and at times in control, were much less likely to get urgent status (the average marginal effect is $-0.15$ and significant). This suggests that agreements and compromises reached in the Senate ignited less, not more, protection from floor amendments in the \emph{Cámara's} plenary, most likely as a consequence of the greater preference divergence between the President and the opposition-led Senate. Analysis of inter-chamber negotiation and the reliance on urgency in the upper chamber are interesting venues for future research. 
+Another effect worth highlighting is \emph{Introd.\ in Senate}. Bills successfully passing the Upper Chamber first, where the opposition was systematically larger and at times in control, were much less likely to get urgent status (the average marginal effect is $-0.15$ and significant). This suggests that agreements and compromises reached in the Senate ignited less, not more, protection from floor amendments in the \emph{Cámara's} plenary, most likely as a consequence of the greater preference divergence between the President and the opposition-led Senate. Analysis of inter-chamber negotiation and the reliance on urgency in the Upper Chamber are interesting venues for future research. 
 
 \begin{figure}
   \centering
@@ -818,18 +814,18 @@ Another effect worth highlighting is \emph{Introd.\ in Senate}. Bills successful
     \includegraphics[width=.75\columnwidth]{../graphs/predictedPr.pdf}
 \end{figure}
 
-Finally, there are time trends in fast-track authority usage that simulations reveal neatly. Figure \ref{F:sims} portrays the predicted probability that a bill enters the fast-track throughout the legislative year. Regressors in model 3 are held constant to simulate a bill sent to the \emph{Cámara} in the 2006--10 Legislature that was referred to a single committee, axcluding \emph{Hacienda}. The \emph{Pres.~Approval} (insignificant across models) is set to the mean for the first Bacelet presidency, coincining in full with the chose Legislature. The inverted-U shape shows how fast-track probability, predicted at 0.17 for coalition-chaired committees at the start, and 0.08 for the rest, becomes much likelier in the first half of the legislative year. By the second quarter (June--August), the probability is at its maximum, about 0.32 percent and 0.17, respectively. It then experiences a sharp drop, ending the austral Summer break at 0.13 for coalition-chaired committees, and 0.05 for others. And while 95-percent confidence bands overlap, they barely do so and the middle of the legislative year, giving confidence that we are picking up a signal and not just random noise. 
+Finally, there are time trends in fast-track authority usage that simulations reveal neatly. Figure \ref{F:sims} portrays the predicted probability that a bill enters the fast-track throughout the legislative year. Regressors in model 3 are held constant to simulate a bill sent to the \emph{Cámara} in the 2006--10 Legislature that was referred to a single committee, excluding \emph{Hacienda}. \emph{Presidential Approval} (insignificant across models) is set to the mean for President Bachelet's first term, coinciding in full with the 2006--10 Legislature. The inverted-U shape shows how fast-track probability, predicted at 0.17 for coalition-chaired committees at the start, and 0.08 for the rest, becomes much likelier in the first half of the legislative year. By the second quarter (June--August), the probability is at its maximum, about 0.32 percent and 0.17, respectively. It then experiences a sharp drop, ending the austral Summer break at 0.13 for coalition-chaired committees, and 0.05 for others. And while 95-percent confidence bands overlap, they barely do so at the middle of the legislative year, lending confidence that we are picking up a signal and not just random noise. 
 
 \section{Discussion}
 
-This paper has argued that the effects of urgency authority are procedural. We portray Latin American constitutional urgency authority as equivalent to the fast-track authority that United States presidents enjoy periodically: proposals that presidents qualify as urgent are considered under restrictive rules by the chamber's plenary. Amendments and other motions are forbidden, the proposal must be voted up or down. While all constitutions remain silent about prodecural implications of urgencies, and we have verified that our characterization matches Chilean sub-constitutional institutions only, it is plausible and likely that others do too. After all, the rationale of the urgency authority is expediting the legislative process, and restrictive rules are a natural choice to speed urgent bills' consideration before an explicit deadline expires. 
+This paper has argued that the effects of urgency authority are procedural. We have portrayed Latin American constitutional urgency authority as equivalent to the fast-track authority that United States presidents enjoy periodically. That is, proposals that presidents qualify as urgent are considered under restrictive rules by the chamber's plenary, they must be voted up-or-down, without amendments. While all constitutions remain silent about prodecural implications of urgencies, and we have verified that our characterization matches Chilean sub-constitutional institutions only, it is plausible and likely that others do too. After all, the rationale of the urgency authority is expediting the legislative process, and restrictive rules are a natural choice to speed urgent bills' consideration before an explicit deadline expires. 
 
-Our formal model of the fast-track authority shows that preference overlap between the president and the reporting committee is the mechanism driving the choice to put bills on the fast-track. A systematic analysis of proposals in the Chilean lower chamber in recent years finds evidence that, other things constant, bills reported by committees chaired by members of the president's coalition/party are about twice as likely to be fast-tracked than the rest. To the extent that parties and coalitions indicate preference overlap (as is accepted in Chile), the evidence supports our main theoretical results.
+The formal model we present of fast-track authority shows that preference overlap between the president and the reporting committee is the mechanism driving the choice to put bills on the fast-track. A systematic analysis of proposals in the Chilean lower chamber in recent years finds evidence that, other things constant, bills reported by committees chaired by members of the president's coalition/party are about twice as likely to be fast-tracked than the rest. To the extent that parties and coalitions indicate preference overlap (as is accepted in Chile), the evidence supports our main theoretical results.
 
-Our results and findings are of natural interest to students of comparative political institutions, especially those interested in unorthodox legislative procedure and separation of powers. They also shed light in the field of American Politics. In a provocative book, \citet{howell.moe.Relic2016} make an argument in favor of giving U.S.\ presidents permanent fast-track authority not limited to trade agreements. In order to have a coherent and effective government, they argue in favor constitutional reform to put the president at the center of the legislative process: ``presidents should be granted enhanced agenda-setting powers to propose bills to Congress, which Congress should then be required to vote on without amendment, on a strictly majoritarian basis, within a fixed period of time'' (145). Failure to vote in due time would turn bills in the fast-track into law. Equating urgency and fast-track authorities shows that is what we called the automatic adoption variant. Reform would make presidents similar to those in Ecuador, Paraguay, and Uruguay. 
+Our results and findings are of natural interest to students of comparative political institutions, especially those interested in unorthodox legislative procedure and separation of powers. They also shed light in the field of American Politics. In a provocative book, \citet{howell.moe.Relic2016} make an argument in favor of giving U.S.\ presidents permanent fast-track authority not limited to trade agreements. In order to have a coherent and effective government, they argue in favor of constitutional reform to put the president at the center of the legislative process: ``presidents should be granted enhanced agenda-setting powers to propose bills to Congress, which Congress should then be required to vote on without amendment, on a strictly majoritarian basis, within a fixed period of time'' (145). Failure to vote in due time would turn those bills into law. Equating urgency and fast-track authorities shows this to be what we called the automatic adoption variant. Reform would make presidents similar to those in Ecuador, Paraguay, and Uruguay. 
 %``[...] [T]he Constitution would be amended to grant the president \emph{permanent} fast-track authority over \emph{all} policy matters (including budgets and appointments)'' (145, emphasis in the original)
 
-It was also also established that, while giving the executive power to make policy unilaterally, fast-track authority is not dictatorial. Congress retains authority to reject urgent proposals, and cannot therefore be made worse-off than the status quo. But, our model shows, the associated closed rule buys presidents substantial influence in lawmaking through selection (or, perhaps, even direct negotiation with committee chairs) of reports strategically allocating the bulk of gains in her favor.
+It was also also established that, while giving the executive power to make policy unilaterally, fast-track authority is not dictatorial. Congress retains authority to reject urgent proposals, and cannot therefore be made worse-off than the status quo. But, our model shows, the associated closed rule buys presidents substantial influence in lawmaking through selection (or, perhaps, even direct negotiation with committee chairs) of reports strategically allocating the bulk of gains in her favor. 
 
 Last, our investigation contrinutes to the literature on restrictive plenary procedures. One difference sets fast-track mechanisms apart from standard closed rules. The unique role and function to determine whether or not a major bill will be considered, and which amendments and motions will be allowed, is firmly in control of the legislative leadership, acting as sole gatekeepers to the plenary \citep{cox.2006}. As with France's \emph{vote bloqué}, with fast-track authority the executive branch gets to pull some of the gatekeeping levers, earning a priceless legislative prerrogative worthy of further research. 
  
